[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
buddy_system_allocator = "0.11.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
log = "0.4.22"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
xmas-elf = "0.9.1"

[profile.release]
debug = true
